Praca nad API i edycją playlist
