# backend/src/modules/sync/dto/record-log.dto.ts
@@ -1,11 +1,28 @@
 import { IsString, IsNotEmpty, IsOptional } from 'class-validator';
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
+
+export enum LogLevel {
+  INFO = 'INFO',
+  ERROR = 'ERROR',
+  PLAYBACK = 'PLAYBACK',
+}
 
 export class RecordLogDto {
+
+  @ApiProperty({
+    example: 'Playback started',
+    description: 'Treść komunikatu logu',
+  })
   @IsString()
   @IsNotEmpty()
   message: string;
 
-  @IsString()
+
+  @ApiPropertyOptional({
+    enum: LogLevel,
+    example: LogLevel.INFO,
+    description: 'Poziom logu',
+  })
   @IsOptional()
-  level?: 'INFO' | 'ERROR' | 'PLAYBACK';
+  level?: LogLevel;
 }
